--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           >Close</a
         >
         <div align="center">
-          <div class="flex flex-row">
+          <div>
             <img
               class="uk-margin-medium-right"
               src="img/info.png"
@@ -162,6 +162,7 @@
               Tax : 0% Buy/Sell Tax
             </div>  
           </div>
+        </div>
       </div>
     </div>
 
