--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
             <a
               class="hover-image custom-font uk-margin-small-top"
               id="menu-text"
-              href="#modal-container"
-              uk-toggle
-              >Tokenomics</a
+              href="#"
+              >DrunkBeaver</a
             >
           </div>
         </div>
@@ -108,9 +107,18 @@
     </div>
     <div class="uk-position-center-right uk-visible@l">
       <div class="uk-margin-xlarge-top">
-        <a target="_blank" href="###"
-          ><img class="uk-margin-xlarge-top" src="img/book-pc.gif" width="210"
+        <a target="_blank"
+        href="#modal-container"
+        uk-toggle>
+          <img class="uk-margin-xlarge-top" src="img/book-pc.gif" width="210"
         /></a>
+        <a
+        class="hover-image custom-font uk-margin-small-top"
+        id="menu-text"
+        href="#modal-container"
+        uk-toggle
+        >Tokenomics</a
+      >
       </div>
     </div>
     <div
@@ -333,13 +341,17 @@
         </div>
 
         <div class="uk-position-center">
-          <a target="_blank" href="#"
+          <a target="_blank"
+          href="#modal-container"
+          uk-toggle
+
             ><img
               class="uk-margin-xlarge-top"
               src="img/book-pc.gif"
               width="210"
           /></a>
         </div>
+        
 
         <div
           class="uk-position-bottom-center uk-card uk-background-cover uk-margin-medium-bottom uk-margin-small-left"
