--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Meet $NERD, the most disgusting and degenerate manifestation of shitcoin addiction. Exclusively on Moonshot and solana"
+      content="Meet $NERD, the most disgusting and degenerate manifestation of shitcoin addiction. Exclusively on Moonshot and Ethereum"
     />
     <link rel="stylesheet" href="css/uikit.min.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -167,7 +167,8 @@
               CA: 0x00000000000000000000000000000000000000</br>
               Total Supply : 100M</br>
               Liquidity Pool : LP Burned</br>
-              Tax : 0% Buy/Sell Tax
+              Tax : 0% Buy/Sell Tax</br>
+              Ownership : Ownership Renounced
             </div>  
           </div>
         </div>
@@ -192,8 +193,8 @@
               <hr id="hr" />
               <h3 class="uk-margin-remove-top">RETARD DEV SCREWS UP</h3>
               <b
-                >DrunkBeaver Goes to battle with Solana after<br />
-                retard dev renounces contract to solana program<br />
+                >DrunkBeaver Goes to battle with Ethereum after<br />
+                retard dev renounces contract to ethereum program<br />
                 addy before renouncing freeze and mint auth.<br />
                 It`s an uphill battle, can DrunkBeaver do it?</b
               ><br /><br />
